err/exception-reports.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/exception_reports'...
Compiling './lib/python3.5/site-packages/exception_reports/decorators.py'...
***   File "./lib/python3.5/site-packages/exception_reports/decorators.py", line 46
    raise type(e)(f'{str(e)} [report:{report_location}]').with_traceback(reporter.tb) from None
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/exception_reports/logs.py'...
***   File "./lib/python3.5/site-packages/exception_reports/logs.py", line 40
    logger.warning(f"Error getting traceback data {repr(e)}")
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/exception_reports/reporter.py'...
***   File "./lib/python3.5/site-packages/exception_reports/reporter.py", line 87
    v = f'{v[0:self.head_var_length]}... \n\n<trimmed {len(v)} bytes string>\n\n ...{v[-self.tail_var_length:]}'
                                                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/exception_reports/storages.py'...
***   File "./lib/python3.5/site-packages/exception_reports/storages.py", line 55
    response = conn.upload(f'{self.prefix}{filename}', text_stream, self.bucket)
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/exception_reports/utils.py'...
***   File "./lib/python3.5/site-packages/exception_reports/utils.py", line 40
    return f'{datetime.datetime.now(datetime.timezone.utc)}_{uuid.uuid4().hex}.{extension}'.replace(' ', '_')
                                                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/exception_reports-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinys3'...
Listing './lib/python3.5/site-packages/tinys3-0.1.12.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
